<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="360dp"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn2"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="184dp"
        android:text="@string/btn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn4"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/select"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />
</androidx.constraintlayout.widget.ConstraintLayout>